Refactored AssessmentStatus use on Services
 `EmployeeAssessment::isCompleted` for better clarity.
- Applied consistent formatting across method calls, builder patterns, and chained streams.
- Updated test cases to adopt aligned and readable mock setups.